--- a/configs/.config/starship.toml
+++ b/configs/.config/starship.toml
@@ -1,3 +1,5 @@
+format = "$directory$all"
+
 [aws]
 format = '\[[$symbol($profile)(\($region\))(\[$duration\])]($style)\]'
 disabled = false
@@ -23,6 +25,9 @@ format = '\[[$symbol($version)]($style)\]'
 
 [deno]
 format = '\[[$symbol($version)]($style)\]'
+
+[directory]
+format = '\[$path($style)$read_only\]($read_only_style) '
 
 [docker_context]
 format = '\[[$symbol$context]($style)\]'
