Save config from 2019 Intel MBP

--- a/configs/.config/flavours/config.toml
+++ b/configs/.config/flavours/config.toml
@@ -1,1 +1,7 @@
 shell = "bash -c '{}'"
+
+[[item]]
+file = "~/.colors"
+template = "bash"
+rewrite = true
+hook = "systemctl --user reload rgbdaemon"
